--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.10.6",
     "grunt": "^0.4.5",
     "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-node-inspector": "^0.1.5",
     "grunt-nodemon": "^0.3.0",
