--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bax",
+  "name": "säänosto",
   "version": "0.0.1",
   "authors": "bodhisatva",
   "description": "Basic boilerplate for rapid prototyping with Bootstrap, Angular and Express",
