--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Bax",
+  "name": "säänosto",
   "version": "0.0.1",
-  "description": "Basic boilerplate for rapid prototyping with Bootstrap, Angular and Express",
+  "description": "Säänosto proto iltalehdelle",
   "main": "gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
