--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,13 @@
   "version": "0.0.1",
   "authors": "bodhisatva",
   "description": "Basic boilerplate for rapid prototyping with Bootstrap, Angular and Express",
-
   "dependencies": {
     "angular-ui-router": "~0.2.13",
     "angular": "~1.3.10",
     "bootstrap": "~3.3.2"
+  },
+  "devDependencies": {
+    "angular-animate": "~1.3.13",
+    "angular-bootstrap": "~0.12.1"
   }
 }
